--- a/LoginMvpDemo/app/build.gradle
+++ b/LoginMvpDemo/app/build.gradle
@@ -27,4 +27,21 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+
+
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+
+
+    // json 转换器
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    // rxjava 转换器
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+    // String 转换器
+    compile 'com.squareup.retrofit2:converter-scalars:2.2.0'
+
+    // butterknife
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
